syntax = "proto3";

package todo;

message Todo {
  int32 id = 1;
  string title = 2;
  string desc = 3;
  bool completed = 4;
  string createdAt = 5;
}

message TodoById {
  int32 id = 1;
}

service TodoService {
  rpc FindOne(TodoById) returns (Todo);
  rpc Create(Todo) returns (Todo);
  rpc Edit(Todo) returns (Todo);
  rpc DeleteOne(TodoById) returns (Todo);
}